# postgeoda

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  boost  install_postgeoda.sh  libgeoda  libgeoda_src  notes.txt  postgeoda.control.in  test.sh  version.config
binaries/awslinux/: notes.md  postgeoda--0.0.1.sql  postgeoda.control
postgeoda/: CMakeLists.txt  install.sh  notes.md  notes.txt  paper  performance  postgeoda.control.in
postgeoda/sql/: CMakeLists.txt  breaks.sql  g.sql  geary.sql  joincount.sql  moran.sql  quantilelisa.sql  rates.sql  redcap.sql  sa.sql  scc.sql  skater.sql  weights.sql  weights_dist.sql  weights_knn.sql
postgeoda/src/: CMakeLists.txt  binweight.cpp  binweight.h  breaks.c  geary.c  joincount.c  lisa.c  lisa.h  localg.c  localmoran.c  neighbor_match.c  postgeoda.cpp  postgeoda.h  proxy.cpp  proxy.h  proxy_breaks.cpp  proxy_joincount.cpp  proxy_localg.cpp  proxy_localgeary.cpp  proxy_quantilelisa.cpp  proxy_scc.cpp  quantilelisa.c  rates.c  redcap.c  skater.c  weights.c  weights.h  weights_cont.c  weights_dist.c  weights_knn.c
postgeoda/test/: CMakeLists.txt  test_weights_queen.sql
sql/: CMakeLists.txt  weights.sql
src/: CMakeLists.txt  config.h.in  geofeature.h  geoms.c  geoms.h  lwgeom_log.c  lwgeom_log.h  proxy.cpp  proxy.h  utils.c  utils.h  weights.c
test/: test_weights_queen.sql
test/expected/: test_weights_queen.out
